2007-03-08  Gary Benson  <gbenson@redhat.com>

	PR classpath/30983:
	* gnu/xml/dom/ls/DomLSParser.java (getInputSource):
	Do not use the entity resolver to resolve the top-level document.

2007-03-07  Tom Tromey  <tromey@redhat.com>

	PR classpath/31057:
	* java/util/regex/Pattern.java (toString): New method.

2007-03-07  Gary Benson  <gbenson@redhat.com>

	PR classpath/30906:
	* resource/META-INF/services/org.w3c.dom.DOMImplementationSourceList:
	New file.

2007-03-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/lang/management/BeanImpl.java:
	(translate(String)): Add horrible generics hacks
	to make things work with the new type signatures.
	* javax/management/loading/ClassLoaderRepository.java:
	Added generic types.
	* javax/management/openmbean/CompositeDataSupport.java:
	Likewise.
	* javax/management/openmbean/OpenMBeanOperationInfo.java:
	Likewise.
	* javax/management/openmbean/OpenMBeanParameterInfo.java:
	Likewise.

2007-03-06  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/FreetypeGlyphVector.java
	(getGlyphOutline): Apply glyph position translation.
	(getOutline): Do not apply glyph position translation.

2007-03-06  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/Main.java (getName): New
	method.
	(getParser): Now protected.  Use getName.  Add '-v' alias for
	--verbose.
	(postParse): New method.
	(run): Now protected.  Use postParse.
	* tools/gnu/classpath/tools/javah/GcjhMain.java: New file.

2007-03-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/javax/management/Translator.java:
	(translate(String)): Use a Boolean array to
	comply with the new typing.
	* javax/management/openmbean/ArrayType.java:
	Added generic types and updated copyright headers.
	* javax/management/openmbean/CompositeData.java:
	Likewise.
	* javax/management/openmbean/CompositeDataSupport.java:
	Likewise.	
	* javax/management/openmbean/CompositeType.java:
	Likewise.	